--- a/report.tex
+++ b/report.tex
@@ -121,7 +121,7 @@ d_5 = 3.2 [cm]
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=0.8\textwidth]{image/diagram}
+\includegraphics[width=0.8\textwidth]{images/diagram}
 \caption{Lynxmotion robot diagram}
 \label{fig:forward.diagram}
 \end{center}
@@ -197,7 +197,7 @@ Once the range of the variables has been determined, it can be simulated the mov
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\textwidth]{../Part1/Workspace}
+\includegraphics[width=\textwidth]{images/Workspace}
 \caption{Lynxmotion robot workspace}
 \label{fig:workpace.workspace}
 \end{center}
@@ -311,7 +311,7 @@ Therefore, we found the coordinates of frame 3 with respect to frame 1(namely $\
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\textwidth]{image/theta2,theta3}
+\includegraphics[width=\textwidth]{images/theta2,theta3}
 \caption{Graphical representation of the two solutions for $\theta_2$ and $\theta_3$, namely elbow left and elbow right}
 \label{fig:theta_2,theta_3}
 \end{center}
@@ -459,7 +459,7 @@ The points where chosen by inspecting the workspace and placing them in the work
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\textwidth]{../Part1/Points}
+\includegraphics[width=\textwidth]{images/Points}
 \caption{Chosen points for the pick and place task}
 \label{fig:points.points}
 \end{center}
@@ -472,7 +472,7 @@ In order to test the forward kinematics po
 
 \subsection{Trajectories}
 
-\includegraphics[scale=1]{../Part1/JointTrayectories}
+\includegraphics[scale=1]{images/JointTrayectories}
 
 \section{Part 2}
 
