--- a/report.tex
+++ b/report.tex
@@ -495,6 +495,6 @@ In order to test the forward kinematics po
 %----------------------------------------------------------------------------------------
 
 \bibliographystyle{plain}
-\bibliography{sample}
+%\bibliography{sample}
 
 \end{document}
