Code folder with codes
IK function code and workspace code

--- a/report.tex
+++ b/report.tex
@@ -483,11 +483,11 @@ In order to test the forward kinematics po
 \section{Matlab codes}
 \subsection{Forward kinematics (LynxFK function)}
 \label{apendix:LynxFK}
-\verbatiminput{../Part1/LynxFK.m}
+\verbatiminput{code/Part1/LynxFK.m}
 
 \subsection{Workspace (workspace script)}
 \label{apendix:workspace}
-\verbatiminput{../Part1/workspace_script.m}
+\verbatiminput{code/Part1/workspace_script.m}
 
 
 %----------------------------------------------------------------------------------------
