--- a/report.tex
+++ b/report.tex
@@ -477,7 +477,9 @@ In order to test the forward kinematics po
 \section{Part 2}
 
 
-\subsection{This is a subsection} %What do you think about it? Should others read it?
+\subsection{Inverse Kinematics}
+
+\subsection{Workspace}
 
 \appendix
 \section{Matlab codes}
