--- a/report.tex
+++ b/report.tex
@@ -579,10 +579,30 @@ e_i=P_i-P_i^{\prime}
 
 \subsubsection{Object avoidance}
 
+
+
 \section{Part 2}
-
-
 \subsection{Inverse Kinematics}
+The manipilator of this part is a planar parallel robot which applied in surgery. The schematic diagram is shown in  figure \ref{fig:Parallel}. The task is to find the solutions for $\psi_i$ and $\theta_i$ given the position coordiante with respect to B and the rotation angle $a$ of the platform.
+\begin{figure}
+\begin{center}
+\includegraphics[width=\textwidth]{images/Parallel}
+\caption{Planar Parallel Robot Kinematic Model}
+\label{fig:Parallel}
+\end{center}
+\end{figure}
+
+The core thinking is that finding the coordinate of $PP_i$ regarding to $PB_i$, which can be derived from the vector  $\overrightarrow{PB_i PP_i}$. According to vector chian, $\overrightarrow{PB_i PP_i}$ can be expressed as
+
+\begin{equation}
+\overrightarrow{PB_i PP_i} = \overrightarrow{B PP_i} - \overrightarrow{B PB_i}
+\end{equation}
+
+
+
+
+
+
 
 \subsection{Workspace}
 
