--- a/report.tex
+++ b/report.tex
@@ -589,7 +589,7 @@ The manipilator of this part is a planar parallel robot which applied in surgery
 \begin{figure}[htbp] 
 \begin{center}
 \includegraphics[width=\textwidth]{images/Parallel}
-\caption{Planar Parallel Robot Kinematic Model}
+\caption{Planar parallel robot kinematic model}
 \label{fig:Parallel}
 \end{center}
 \end{figure}
@@ -669,6 +669,7 @@ Substituting them into equation \ref{eq:parallel_e} we derive a quadratic functi
 
 The solutions can be solved by a generalized equation
 \begin{equation}
+\label{eq:parallel_t}
 t_{1,2}=\frac{-e_1\pm\sqrt{e_1^2+e_2^2-e_3^2}}{e_3-e_2}
 \end{equation}
 
@@ -696,6 +697,40 @@ Theoratically, there should be 2 solutions for $\psi$ due the existence of $\the
 \end{equation}
 
 \subsection{Workspace}
+Considering that there are three legs in this manipulators, applying geometirc method to work out the workspace might be complexe in some sense. Therefore, algebraic approach relying on the powerful computation of Matlab is also a feasible way to calculate the workspace of the end effector. The core thought is that the real root of the equation\ref{eq:parallel_t} exist for each leg when the point is reachable for the manipulator. Namely, three pairs of $t_1 and t_2$ for every leg are real number within the workspace. Correspondingly, we apply the if statement to judge the value of $t_1 and t_2$. This is a robust method to fit the real workspace by thousands of points forming a region.Then, through specify the coordinate range of point $C$, we can derive the workspace. Concretely, we select a wide range for $X_c,Y_c$ and draw the workspace for different $a$ respectively.
+ 
+\begin{figure}[htbp] 
+\begin{center}
+\includegraphics[width=\textwidth]{images/parallel_workspace2}
+\caption{Workspace of planar parallel robot when $a=0^{\circ}\qquad a=30^{\circ}$}
+\label{fig:parallel_workspace2}
+\end{center}
+\end{figure}
+
+It is obvious from the picture that different angle $a$ correspond to various shapes of workspace. Furthermore, we find that when $a=0^{\circ}$, the workspace has the biggest shape. It is reasonable as the base plate and platform are parallel when $a=0^{\circ}$, which enable three legs to stretch themselves to the most. The comparison of different shapes of workspace under diverse angle $a$ is shown in figure \ref{fig:parallel_workspace2}
+
+\begin{figure}[htbp] 
+\begin{center}
+\includegraphics[width=\textwidth]{images/parallel_workspace}
+\caption{Comparison of workspace under diverse angle a}
+\label{fig:parallel_workspace2}
+\end{center}
+\end{figure}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 \appendix
 \section{Matlab codes}
